public/main.css
/* ... */
#individualpolls th:first-child {
  padding-left: 0;
}

#individualpolls th:last-child {
  padding-right: 0;
}

#individualpolls td:first-child {
  padding-left: 0;
}

#individualpolls td:last-child {
  padding-right: 0;
}


#individualpolls th.numeric {
  text-align: center;
}

#individualpolls th.samplesize {
  text-align: right;
}

#individualpolls td{
  font-size: 1.06rem;
  text-align: left;
  padding-right: 10px;
  padding-left: 10px;
}

#individualpolls tr {
  border-bottom: 1px solid #cec6b9;
  height: 30px;
}

#individualpolls td.clinton.winner {
  background: #a2c1e1;
}

#individualpolls td.trump.winner {
  background: #f4a098;
}

#individualpolls #individualpolls td.winner.narrowonly {
  font-weight: 400;
}

#individualpolls td.narrowonly {
  height: 32px;
}

#individualpolls td.winner.narrowonly .winner {
  font-weight: 600;
}

#individualpolls td.numeric{
  text-align: center;
  border-left: 1px solid #cec6b9;
}

#individualpolls td.samplesize {
  text-align: right;
}

#individualpolls td.samplesize .sampleType {
  color: #777;
}

#individualpolls td.date{
  min-width: 70px;
  color: #777777;
}

#individualpolls p.notavailable {
  color: #666;
  font-size: 1em;
}

@media (min-width: 600px) {
  #individualpolls .narrowonly {
    display: none;
  }
}

@media (max-width: 600px) {

  #individualpolls td.numeric {
    text-align: center;
    white-space: nowrap;
  }

  #individualpolls .secondary {
    display: none;
  }

  #individualpolls th {
    padding: 0;
  }

  #individualpolls td {
    padding-left: 5px;
    padding-right: 5px;
  }
}

/** State Summary section **/
.bar__state-status {
  width: 100%;
  color: white;
  text-align: center;
  text-transform: uppercase;
  height: 1.5em;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

.bar__state-ec-votes {
  text-align: center;
  font-style: italic;
  color: #A79B88;
  margin: 0.5em 0;
}
.bar__state-ec-votes figure {
  display: inline;
  font-weight: bolder;
  color: black;
}

.bar__state-status.dem {
  background-color: #579dd5;
}

.bar__state-status.leaningDem {
  background-color: #a2c1e1;
}

.bar__state-status.swing {
  background-color: #fcc83c;
}

.bar__state-status.leaningRep {
  background-color: #f4a098;
}

.bar__state-status.rep {
  background-color: #e03d46;
}

.state-page__summary .graphic__ecvotes--label {
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: .5em;
  padding: .5em;
  display: none;
}

.state-page__summary .graphic__ecvotes--circles {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  height: 5.1em;
  width: auto;
  margin: 0 auto;
  box-sizing: border-box;
}

.state-page__summary .graphic__ecvotes--circles .circle {
  width: .5em;
  height: .5em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: 1px solid transparent;
  cursor: pointer;
}

.state-page__summary .graphic__ecvotes--circles .circle .inner-square {
  margin: 0;
  padding: 0;
  border-width: 2px;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  border-width: 2px;
  border-color: #CAC6C1;
  border-style: solid;
  background-color: transparent;
}

@media (max-width: 670px) {
  .state-page__summary .graphic__ecvotes--circles {
    height: 110px;
  }

  .state-page__summary .graphic__ecvotes--circles .circle {
    width: 0.35em;
    height: 0.35em;
  }
}

.state-page__summary .graphic__ecvotes--circles .circle.dem .inner-square {
  border-color: #579dd5;
}

.state-page__summary .graphic__ecvotes--circles .circle.leaningDem .inner-square {
  border-color: #a2c1e1;
}

.state-page__summary .graphic__ecvotes--circles .circle.rep .inner-square {
  border-color: #e03d46;
}

.state-page__summary .graphic__ecvotes--circles .circle.leaningRep .inner-square {
  border-color: #f4a098;
}

.state-page__summary .graphic__ecvotes--circles .circle.swing .inner-square {
  border-color: #fcc83c;
}

.state-page__summary .graphic__ecvotes--circles .circle.ec-vote .inner-square {
  border-color: black !important;
}

.state-page__summary .graphic__ecvotes--circles .circle.current-state.dem .inner-square {
  background-color: #579dd5;
}
.state-page__summary .graphic__ecvotes--circles .circle.current-state.leaningDem .inner-square {
  background-color: #a2c1e1;
}
.state-page__summary .graphic__ecvotes--circles .circle.current-state.rep .inner-square {
  background-color: #e03d46;
}
.state-page__summary .graphic__ecvotes--circles .circle.current-state.leaningRep .inner-square {
  background-color: #f4a098;
}
.state-page__summary .graphic__ecvotes--circles .circle.current-state.swing .inner-square {
  background-color: #fcc83c;
}


#demographic-wrapper {
  width: 100%;
  margin-top: -1em;
}

.demographic-container {
  width: 48%;
  display: inline-block;
  vertical-align: top;
  text-align: center;
  margin-top: 2em;
}

.demographic-container:nth-child(even) {
  float: right;
}

.demographic-container h3 {
  font-family: MetricWeb, sans-serif;
  font-size: 15px;
  font-weight: 400;
  padding: auto 5px;
  text-align: left;
  text-transform: uppercase;
  color: #333;
  margin-bottom: 0.5em;
}

.demographics-barcode-chart {
  max-width: 100%;
  overflow: visible;
}

@media (max-width: 500px) {
  .demographic-container {
    width: 100%;
  }

  .demographic-container:nth-child(even) {
    float: none;
  }
}


.article-figure__heading--state-winners-table {
    margin-bottom: 0.75em;
   /* Needed due to lack of subhead */
}



.state-winners-table {
  width: 100%;
  border-spacing: 0;
}

.state-winners-table th {
  font-size: 0.875em;
  min-width: auto;
  -webkit-font-smoothing: antialiased;
}

.state-winners-table td {
  border-bottom: 1px solid #CEC6B9;
  font-size: 1.06em;
  -webkit-font-smoothing: antialiased;
  font-feature-settings: "tnum";
}

.state-winners-table__empty {
  border-bottom: 0;
}

.state-winners-table__primary-header th {
  text-transform: uppercase;
  text-align: left;
  border-bottom: 0;
  font-weight: 500;
  color: black;
  padding-left: 0.5em;
}
/* ... */

